syntax = "proto3";

package redpanda.api.dataplane.v1alpha3;

import "buf/validate/validate.proto";
import "google/api/annotations.proto";
import "google/api/field_behavior.proto";
import "google/api/resource.proto";
import "google/protobuf/field_mask.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
import "redpanda/api/auth/v1/authorization.proto";
import "redpanda/api/dataplane/v1/pipeline.proto";

// Defines the AI Gateway resource.
message AIGateway {
  option (google.api.resource) = {
    type: "redpanda.api.dataplane.v1alpha3/AIGateway"
    singular: "ai_gateway"
    plural: "ai_gateways"
  };

  // AI Gateway ID.
  string id = 1 [
    (google.api.field_behavior) = OUTPUT_ONLY,
    (buf.validate.field).string.pattern = "^[A-Za-z0-9-_/]+$"
  ];

  // User-friendly AI gateway name.
  string display_name = 2 [
    (google.api.field_behavior) = REQUIRED,
    (buf.validate.field).required = true,
    (buf.validate.field).string.pattern = "^[A-Za-z0-9-_ /]+$",
    (buf.validate.field).string.min_len = 3,
    (buf.validate.field).string.max_len = 128
  ];

  // Optional AI gateway description.
  string description = 3 [(buf.validate.field).string.max_len = 256];

  // Gateway configuration in YAML format.
  string config_yaml = 4 [
    (google.api.field_behavior) = REQUIRED,
    (buf.validate.field).required = true,
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "YAML configuration that defines the AI gateway's behavior, routing rules, and settings."}
  ];

  // The number of resources that are guaranteed to be assigned to the AI Gateway.
  redpanda.api.dataplane.v1.Pipeline.Resources resources = 5 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "The requested amount of resources for the AI Gateway. Depending on the backend, the resources might be guaranteed, or might be tweaked based on the utilization of the AI Gateway."}];

  // Tags are key-value pairs that can be assigned to an AI gateway resource.
  // They help organize AI gateways and enable filtering when listing them.
  map<string, string> tags = 6 [(buf.validate.field).map = {
    max_pairs: 16
    values: {
      string: {pattern: "^([\\p{L}\\p{Z}\\p{N}_.:/=+\\-@]*)$"}
    }
  }];

  // The current AI gateway state.
  State state = 7 [(google.api.field_behavior) = OUTPUT_ONLY];

  // State of the AI gateway.
  enum State {
    STATE_UNSPECIFIED = 0;
    // The AI gateway is starting.
    STATE_STARTING = 1;
    // The AI gateway is running and ready to handle requests.
    STATE_RUNNING = 2;
    // The AI gateway is in the process of stopping.
    STATE_STOPPING = 3;
    // The AI gateway is stopped and in paused state.
    STATE_STOPPED = 4;
    // The AI gateway encountered an error.
    STATE_ERROR = 5;
  }
}

// AIGatewayService is the service for AI Gateways.
// It exposes the API for creating and managing AI gateways and their configurations.
service AIGatewayService {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_tag) = {
    name: "AI Gateways"
    description: "Create and manage AI gateways and their configurations."
  };

  // CreateAIGateway creates an AI Gateway in the Redpanda cluster.
  rpc CreateAIGateway(CreateAIGatewayRequest) returns (CreateAIGatewayResponse) {
    option (google.api.http) = {
      post: "/v1alpha3/ai-gateways"
      body: "ai_gateway"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "Create AI Gateway"
      description: "Create a new AI gateway."
      responses: {
        key: "201"
        value: {
          description: "Created"
          schema: {
            json_schema: {ref: ".redpanda.api.dataplane.v1alpha3.AIGateway"}
          }
        }
      }
    };
    option (redpanda.api.auth.v1.authorization) = {
      required_permission: PERMISSION_EDIT
      api: API_AI_GATEWAY
    };
  }

  // GetAIGateway gets a specific AI Gateway.
  rpc GetAIGateway(GetAIGatewayRequest) returns (GetAIGatewayResponse) {
    option (google.api.http) = {get: "/v1alpha3/ai-gateways/{id}"};
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "Get AI Gateway"
      description: "Get a specific AI gateway."
      responses: {
        key: "200"
        value: {
          description: "OK"
          schema: {
            json_schema: {ref: ".redpanda.api.dataplane.v1alpha3.AIGateway"}
          }
        }
      }
      responses: {
        key: "404"
        value: {
          description: "Not Found"
          schema: {
            json_schema: {ref: ".google.rpc.Status"}
          }
        }
      }
    };
    option (redpanda.api.auth.v1.authorization) = {
      required_permission: PERMISSION_VIEW
      api: API_AI_GATEWAY
    };
  }

  // ListAIGateways implements the list AI gateways method which lists the AI gateways
  // in the Redpanda cluster.
  rpc ListAIGateways(ListAIGatewaysRequest) returns (ListAIGatewaysResponse) {
    option (google.api.http) = {get: "/v1alpha3/ai-gateways"};
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "List AI Gateways"
      description: "List AI gateways. Optional: filter based on AI gateway name."
      responses: {
        key: "200"
        value: {
          description: "OK"
          schema: {
            json_schema: {ref: ".redpanda.api.dataplane.v1alpha3.ListAIGatewaysResponse"}
          }
        }
      }
    };
    option (redpanda.api.auth.v1.authorization) = {
      required_permission: PERMISSION_VIEW
      api: API_AI_GATEWAY
    };
  }

  // UpdateAIGateway updates a specific AI gateway configuration.
  rpc UpdateAIGateway(UpdateAIGatewayRequest) returns (UpdateAIGatewayResponse) {
    option (google.api.http) = {
      put: "/v1alpha3/ai-gateways/{id}"
      body: "ai_gateway"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "Update AI Gateway"
      description: "Update the configuration of an AI gateway."
      responses: {
        key: "200"
        value: {
          description: "OK"
          schema: {
            json_schema: {ref: ".redpanda.api.dataplane.v1alpha3.AIGateway"}
          }
        }
      }
    };
    option (redpanda.api.auth.v1.authorization) = {
      required_permission: PERMISSION_EDIT
      api: API_AI_GATEWAY
    };
  }

  // DeleteAIGateway deletes a specific AI gateway.
  rpc DeleteAIGateway(DeleteAIGatewayRequest) returns (DeleteAIGatewayResponse) {
    option (google.api.http) = {delete: "/v1alpha3/ai-gateways/{id}"};
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "Delete AI Gateway"
      description: "Delete an AI gateway."
      responses: {
        key: "204"
        value: {
          description: "Deleted"
          schema: {}
        }
      }
      responses: {
        key: "404"
        value: {
          description: "Not Found"
          schema: {
            json_schema: {ref: ".google.rpc.Status"}
          }
        }
      }
    };
    option (redpanda.api.auth.v1.authorization) = {
      required_permission: PERMISSION_EDIT
      api: API_AI_GATEWAY
    };
  }

  // StopAIGateway stops a specific AI gateway.
  rpc StopAIGateway(StopAIGatewayRequest) returns (StopAIGatewayResponse) {
    option (google.api.http) = {put: "/v1alpha3/ai-gateways/{id}:stop"};
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "Stop AI Gateway"
      description: "Stop a running AI gateway."
      responses: {
        key: "200"
        value: {
          description: "Stopped"
          schema: {
            json_schema: {ref: ".redpanda.api.dataplane.v1alpha3.AIGateway"}
          }
        }
      }
      responses: {
        key: "404"
        value: {
          description: "Not Found"
          schema: {
            json_schema: {ref: ".google.rpc.Status"}
          }
        }
      }
    };
    option (redpanda.api.auth.v1.authorization) = {
      required_permission: PERMISSION_EDIT
      api: API_AI_GATEWAY
    };
  }

  // StartAIGateway starts a specific AI gateway that has been previously stopped.
  rpc StartAIGateway(StartAIGatewayRequest) returns (StartAIGatewayResponse) {
    option (google.api.http) = {put: "/v1alpha3/ai-gateways/{id}:start"};
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "Start AI Gateway"
      description: "Start a stopped AI gateway."
      responses: {
        key: "200"
        value: {
          description: "Started"
          schema: {
            json_schema: {ref: ".redpanda.api.dataplane.v1alpha3.AIGateway"}
          }
        }
      }
      responses: {
        key: "404"
        value: {
          description: "Not Found"
          schema: {
            json_schema: {ref: ".google.rpc.Status"}
          }
        }
      }
    };
    option (redpanda.api.auth.v1.authorization) = {
      required_permission: PERMISSION_EDIT
      api: API_AI_GATEWAY
    };
  }
}

// AIGatewayCreate contains the details for the AI gateway creation request.
message AIGatewayCreate {
  option (google.api.resource) = {
    type: "redpanda.api.dataplane.v1alpha3/AIGatewayCreate"
    singular: "ai_gateway"
    plural: "ai_gateways"
  };

  // User-friendly AI gateway name.
  string display_name = 1 [
    (google.api.field_behavior) = REQUIRED,
    (buf.validate.field).required = true,
    (buf.validate.field).string.pattern = "^[A-Za-z0-9-_ /]+$",
    (buf.validate.field).string.min_len = 3,
    (buf.validate.field).string.max_len = 128
  ];

  // AI gateway description.
  string description = 2 [(buf.validate.field).string.max_len = 256];

  // Gateway configuration in YAML format.
  string config_yaml = 3 [
    (google.api.field_behavior) = REQUIRED,
    (buf.validate.field).required = true,
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "YAML configuration that defines the AI gateway's behavior, routing rules, and settings."}
  ];

  // Optional list of tags to attach to an AI gateway.
  map<string, string> tags = 4 [(buf.validate.field).map = {
    max_pairs: 16
    values: {
      string: {pattern: "^([\\p{L}\\p{Z}\\p{N}_.:/=+\\-@]*)$"}
    }
  }];

  // The number of resources that are guaranteed to be assigned to the AI gateway.
  redpanda.api.dataplane.v1.Pipeline.Resources resources = 5;
}

// CreateAIGatewayRequest is the request of CreateAIGateway.
message CreateAIGatewayRequest {
  AIGatewayCreate ai_gateway = 1;
}

message CreateAIGatewayResponse {
  AIGateway ai_gateway = 1;
}

message GetAIGatewayRequest {
  // AI Gateway ID.
  string id = 1 [
    (google.api.field_behavior) = REQUIRED,
    (buf.validate.field).required = true,
    (buf.validate.field).string.pattern = "^[A-Za-z0-9-_/]+$"
  ];
}

message GetAIGatewayResponse {
  AIGateway ai_gateway = 1;
}

message ListAIGatewaysRequest {
  // List filter.
  Filter filter = 1;

  // Limit the paginated response to a number of items.
  int32 page_size = 2 [
    (buf.validate.field).int32 = {
      gte: -1
      lte: 100
    },
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      description: "Limit the paginated response to a number of items. Defaults to 50. Use -1 to disable pagination."
      minimum: -1
      maximum: 100
    }
  ];

  // Value of the next_page_token field returned by the previous response.
  // If not provided, the system assumes the first page is requested.
  string page_token = 3;

  message Filter {
    // Substring match on AI gateway name. Case-sensitive.
    string name_contains = 1 [
      (buf.validate.field).ignore = IGNORE_IF_ZERO_VALUE,
      (buf.validate.field).string.pattern = "^[A-Za-z0-9-_ /]+$",
      (buf.validate.field).string.max_len = 128,
      (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "Any AI gateways that partially match this name will be returned."}
    ];

    // Filter AI gateways that contain all of these key/value pairs.
    map<string, string> tags = 2 [
      (buf.validate.field).map = {
        max_pairs: 16
        values: {
          string: {pattern: "^([\\p{L}\\p{Z}\\p{N}_.:/=+\\-@]*)$"}
        }
      },
      (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "AI gateways that match all the provided tags will be returned."}
    ];

    string secret_id = 3;
  }
}

message ListAIGatewaysResponse {
  repeated AIGateway ai_gateways = 1;
  string next_page_token = 2;
}

message AIGatewayUpdate {
  option (google.api.resource) = {
    type: "redpanda.api.dataplane.v1alpha3/AIGatewayUpdate"
    singular: "ai_gateway"
    plural: "ai_gateways"
  };

  // User-friendly AI gateway name.
  string display_name = 1 [
    (buf.validate.field).string.pattern = "^[A-Za-z0-9-_ /]+$",
    (buf.validate.field).string.min_len = 3,
    (buf.validate.field).string.max_len = 128
  ];

  // AI gateway description.
  string description = 2 [(buf.validate.field).string.max_len = 256];

  // Gateway configuration in YAML format.
  string config_yaml = 3 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "YAML configuration that defines the AI gateway's behavior, routing rules, and settings."}];

  // A map of tags to add, update or delete.
  // If a tag's value is empty, the server interprets that as a deletion.
  map<string, string> tags = 4 [(buf.validate.field).map = {
    max_pairs: 16
    values: {
      string: {pattern: "^([\\p{L}\\p{Z}\\p{N}_.:/=+\\-@]*)$"}
    }
  }];

  // The number of resources that are guaranteed to be assigned to the AI gateway.
  redpanda.api.dataplane.v1.Pipeline.Resources resources = 5;
}

message UpdateAIGatewayRequest {
  // AI Gateway ID.
  string id = 1 [
    (google.api.field_behavior) = REQUIRED,
    (buf.validate.field).required = true,
    (buf.validate.field).string.pattern = "^[A-Za-z0-9-_/]+$"
  ];

  AIGatewayUpdate ai_gateway = 2 [
    (google.api.field_behavior) = REQUIRED,
    (buf.validate.field).required = true
  ];

  // Specifies which fields should be updated. If not provided,
  // all fields will be updated.
  google.protobuf.FieldMask update_mask = 3;
}

message UpdateAIGatewayResponse {
  AIGateway ai_gateway = 1;
}

message DeleteAIGatewayRequest {
  // AI Gateway ID.
  string id = 1 [
    (google.api.field_behavior) = REQUIRED,
    (buf.validate.field).required = true,
    (buf.validate.field).string.pattern = "^[A-Za-z0-9-_/]+$"
  ];
}

message DeleteAIGatewayResponse {}

message StopAIGatewayRequest {
  // AI Gateway ID.
  string id = 1 [
    (google.api.field_behavior) = REQUIRED,
    (buf.validate.field).required = true,
    (buf.validate.field).string.pattern = "^[A-Za-z0-9-_/]+$"
  ];
}

message StopAIGatewayResponse {
  AIGateway ai_gateway = 1;
}

message StartAIGatewayRequest {
  // AI Gateway ID.
  string id = 1 [
    (google.api.field_behavior) = REQUIRED,
    (buf.validate.field).required = true,
    (buf.validate.field).string.pattern = "^[A-Za-z0-9-_/]+$"
  ];
}

message StartAIGatewayResponse {
  AIGateway ai_gateway = 1;
}
